--- a/recap/nodejs/recap/section13/public/css/admin-products.css
+++ b/recap/nodejs/recap/section13/public/css/admin-products.css
@@ -208,10 +208,11 @@ main {
 
 
 .main__main__products-list--item--description-buttons button {
-    padding: 0.1em 0.6em 0.15em 0.5em;
-    border: 0;
+    /* padding: 0.1em 0.6em 0.15em 0.5em; */
+    padding: 0;
     border-radius: 2px;
-    border: 1px solid var(--button-white-border);
+    /* border: 1px solid var(--button-white-border); */
+    border:  0;
 
 
     font-size: 0.8em;
@@ -238,21 +239,49 @@ main {
 
 }
 
-.white-button {
+
+.white-button-admin {
     /* border-radius: 7px; */
     background-color: var(--button-white);
-    border: 1px solid var(--button-white-border);
+    /* border: 1px solid var(--button-white-border); */
     font-weight: 400;
     box-shadow:  0 0px 2px 0 rgba(213,217,217,.5);
     color: var(--sort-button-text);
     text-decoration: none;
 
+
 }
 
-.white-button:hover {
+.white-button-admin a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: red; */
+    height: 100%;
+    width: 100%;
+    padding: 0.1em 0.6em 0.15em 0.5em;
+    border-radius: 2px;
+    border: 1px solid var(--button-white-border);
+
+
+}
+
+
+.white-button-admin a:hover {
     background-color: var(--button-white-hover);
     border: 1px solid var(--button-white-hover-border);
 
+}
+
+.white-button-admin--clicked {
+    outline:2px solid var(--link-click-outline2);
+    outline-offset:  2px;
+    box-shadow: 
+    0px 0px 4px 5px var(--link-click-outline2-shadow);
+    border: 1px solid var(--button-white-border);
+
+
+    
 }
 
 
