Add a user model, give created products a user id, populate item details with the name associated with this userId
Work on the postToCart controller to add a cart object with items/quantity to user

--- a/recap/nodejs/recap/section13/views/shop/product-details.ejs
+++ b/recap/nodejs/recap/section13/views/shop/product-details.ejs
@@ -155,7 +155,7 @@
                 <!-- <form action="/cart" method="POST"> -->
                     <span class="content__item__ordering--select">
                         <select name="requestedCount">
-                            <option>1 </option>
+                            <option selected>1</option>
                             <option>2</option>
                             <option>3</option>
                             <option>4</option>
@@ -183,7 +183,7 @@
                         <span>Amazon.eg</span></div>
                     <div>
                         <span>Sold by</span>
-                        <span><a href="">Amazon.eg</a></span></div>
+                        <span><a href=""><%=product.userId.name%></a></span></div>
                 </div>
 
             </div>
