Work on the cart page
 - add controllers and routers
- add some styling in css
- add functonality to display shipping text depending on the amount reach from the free delivery minimum total cost
- add functionality to change the user's cart item's quantity from the cart page

--- a/recap/nodejs/recap/section13/public/css/cart_style.css
+++ b/recap/nodejs/recap/section13/public/css/cart_style.css
@@ -227,11 +227,28 @@ img {
 
 .proceed-qualified-1 {
     color: var(--qualified-text);
+    /* font-size: 0.8rem; */
+    word-spacing: 1rem;
 }
 
 .proceed-qualified-2 {
     color: var(--sort-button-text);
+    /* font-size: 0.8rem; */
+    word-spacing: 0.1rem;
+    margin-bottom: 0.5rem;
+
 }
+
+.proceed-qualified-1, .proceed-qualified-2 {
+    word-spacing: 0.05rem;
+}
+
+.proceed-qualified-3 {
+    font-size: 0.85rem;
+    word-spacing: 0.05rem;
+
+}
+
 
 .row1--extra--proceed--qualify a {
     color: var(--product-rating-blue);
@@ -671,3 +688,7 @@ img {
     }
 
 }
+
+
+
+
