--- a/recap/nodejs/recap/section13/views/includes/index-header.ejs
+++ b/recap/nodejs/recap/section13/views/includes/index-header.ejs
@@ -65,7 +65,7 @@
                         </span>
                     </li>
                     <li class="main-navigation__List-2-link not_mobile"><a href="">Orders</a></li>
-                    <li class="main-navigation__List-2-link-small"><a href="">Cart</a></li>
+                    <li class="main-navigation__List-2-link-small"><a href="/cart">Cart</a></li>
                 </ul>
 
                 <div class="main-navigation__search">
