--- a/recap/nodejs/recap/section13/views/includes/index-footer.ejs
+++ b/recap/nodejs/recap/section13/views/includes/index-footer.ejs
@@ -82,13 +82,15 @@
                 </li>
                 <li>
                     <a href="" class="main-footer__content-links2-list-item1" aria-label="language selection">
-                        <span>English</span>
+                        <span class="globalLanguageIcon"></span>
+                        <span class="globalLanguage"></span>
                         <span class="select-caret-down"></span>
                     </a>
                 </li>
                 <li>
                     <a href="" class="main-footer__content-links2-list-item2" aria-label="country selection">
-                        <span>Egypt</span>
+                        <span class="globalCountryFlag"></span>
+                        <span class="globalCountry"></span>
                     </a>
                 </li>
             </ul>
