--- a/recap/nodejs/recap/section13/views/includes/index-header.ejs
+++ b/recap/nodejs/recap/section13/views/includes/index-header.ejs
@@ -6,8 +6,9 @@
             <div class="main-navigation__container">
                 <ul class="main-navigation__List-1">
                     <li class="main-navigation__List-1-link-small not_desktop"><a id="header-menu" aria-label="browse categories">=</a></li>
-                    <li class="main-navigation__List-1-link-logo"><a href="" id="header-logo" aria-label="Amazon egypt home"></a><a href="" id="header-logo--text" aria-label="country selection, currently browsing amazon egypt shop">.eg</a></li>
-                    <li class="main-navigation__List-1-link not_mobile"><a href="" aria-label="choose delivery destination country">Deliver to</a></li>
+                    <!-- <li class="main-navigation__List-1-link-logo"><a href="" id="header-logo" aria-label="Amazon egypt home"></a><a href="" id="header-logo--text" aria-label="country selection, currently browsing amazon egypt shop" class="globalUrlExt"></a></li> -->
+                    <li class="main-navigation__List-1-link-logo"><a href="" id="header-logo"></a><a href="" id="header-logo--text" class="globalUrlExt"></a></li>
+                    <li class="main-navigation__List-1-link not_mobile"><a id="header-destination" href="" aria-label="choose delivery destination country">Deliver to<p></p></a></li>
                 </ul>
 
                 <div class="main-navigation__container-separator"></div>
@@ -80,7 +81,7 @@
                             </optgroup>
                         </select>
                         <span class="select-caret-down"></span>
-                        <input type="search" id="main-navigation__search-box" placeholder="Search Amazon.eg" autocomplete="off" aria-label="Search Amazon.eg" spellcheck="false" >
+                        <input type="search" id="main-navigation__search-box" placeholder="Search Amazon" autocomplete="off" aria-label="Search Amazon" spellcheck="false" >
                         <button type="submit" id="main-navigation__search-button" aria-label="Submit search"></button>
                     </form>
                 </div>
